python/lapack_like/factor.py


# Interpolative decomposition
# ===========================
lib.ElID_s.argtypes = \
lib.ElID_c.argtypes = \
lib.ElIDDist_s.argtypes = \
lib.ElIDDist_c.argtypes = \
  [c_void_p,c_void_p,c_void_p,QRCtrl_s,bType]

lib.ElID_d.argtypes = \
lib.ElID_z.argtypes = \
lib.ElIDDist_d.argtypes = \
lib.ElIDDist_z.argtypes = \
  [c_void_p,c_void_p,c_void_p,QRCtrl_d,bType]

def ID(A,ctrl,canOverwrite=False):
  if type(A) is Matrix: 
    Omega = Permutation()
    Z = Matrix(A.tag)
    args = [A.obj,Omega.obj,Z.obj,ctrl,canOverwrite]
    if   A.tag == sTag: lib.ElID_s(*args)
    elif A.tag == dTag: lib.ElID_d(*args)
    elif A.tag == cTag: lib.ElID_c(*args)
    elif A.tag == zTag: lib.ElID_z(*args)
    else: DataExcept()
    return Omega, Z
  elif type(A) is DistMatrix:
    Omega = DistPermutation(A.Grid())
    Z = DistMatrix(A.tag,STAR,VR,A.Grid())
    args = [A.obj,Omega.obj,Z.obj,ctrl,canOverwrite]
    if   A.tag == sTag: lib.ElIDDist_s(*args)
    elif A.tag == dTag: lib.ElIDDist_d(*args)
    elif A.tag == cTag: lib.ElIDDist_c(*args)
    elif A.tag == zTag: lib.ElIDDist_z(*args)
    else: DataExcept()
    return Omega, Z
  else: TypeExcept()

# Skeleton decomposition
# ======================
lib.ElSkeleton_s.argtypes = \
lib.ElSkeleton_c.argtypes = \
lib.ElSkeletonDist_s.argtypes = \
lib.ElSkeletonDist_c.argtypes = \
  [c_void_p,c_void_p,c_void_p,c_void_p,QRCtrl_s]

lib.ElSkeleton_d.argtypes = \
lib.ElSkeleton_z.argtypes = \
lib.ElSkeletonDist_d.argtypes = \
lib.ElSkeletonDist_z.argtypes = \
  [c_void_p,c_void_p,c_void_p,c_void_p,QRCtrl_d]

def Skeleton(A,ctrl):
  if type(A) is Matrix:
    PR = Permutation()
    PC = Permutation()
    Z = Matrix(A.tag)
    args = [A.obj,PR.obj,PC.obj,Z.obj,ctrl]
    if   A.tag == sTag: lib.ElSkeleton_s(*args)
    elif A.tag == dTag: lib.ElSkeleton_d(*args)
    elif A.tag == cTag: lib.ElSkeleton_c(*args)
    elif A.tag == zTag: lib.ElSkeleton_z(*args)
    else: DataExcept()
    return PR, PC, Z
  elif type(A) is DistMatrix:
    PR = DistPermutation(A.Grid())
    PC = DistPermutation(A.Grid())
    Z = DistMatrix(A.tag,STAR,VR,A.Grid())
    args = [A.obj,PR.obj,PC.obj,Z.obj,ctrl]
    if   A.tag == sTag: lib.ElSkeletonDist_s(*args)
    elif A.tag == dTag: lib.ElSkeletonDist_d(*args)
    elif A.tag == cTag: lib.ElSkeletonDist_c(*args)
    elif A.tag == zTag: lib.ElSkeletonDist_z(*args)
    else: DataExcept()
    return PR, PC, Z
  else: TypeExcept()
